ui(root) fix scroll snap align

--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,7 @@
 }
 
 .section {
-  padding-top: 2em;
-  padding-bottom: 1.25em;
+  padding-block: 2em;
   scroll-snap-align: start;
 }
 
@@ -32,6 +31,14 @@
   font-weight: 600;
   text-align: center;
   font-size: 0.85em;
+}
+
+.grid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+  gap: 2em 1em;
+  justify-items: center;
 }
 
 @keyframes fadeIn {
